[gd_scene load_steps=11 format=3 uid="uid://dvh658edbkjrn"]

[ext_resource type="PackedScene" uid="uid://bxy2ihf8ehq18" path="res://Assets/3D Models/Interactive/Objects/Models/Chest.blend" id="1_5yx1o"]
[ext_resource type="Script" uid="uid://yqpm53nh5cdk" path="res://Assets/3D Models/Interactive/Objects/Finalized/Chest/Chest_Finalized_SCRIPT.gd" id="2_f51ac"]
[ext_resource type="Script" uid="uid://billeg7qursg8" path="res://Assets/3D Models/Interactive/Objects/Finalized/Chest/Chest_Finalized_StaticBody3D_SCRIPT.gd" id="2_ha2tq"]
[ext_resource type="FontFile" uid="uid://c4h0gd5a2e2qb" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Extrabold.otf" id="4_xn6ko"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nm63g"]
size = Vector3(1, 1, 2.29813)

[sub_resource type="Animation" id="Animation_xo4kc"]
length = 0.001

[sub_resource type="Animation" id="Animation_kju7u"]
resource_name = "close"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLayer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.73208, 0.517632),
"update": 0,
"values": [Vector3(-3.1381, 0, 1.0472), Vector3(-3.13737, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ye7vl"]
resource_name = "open"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLayer:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.378929, 2.73208),
"update": 0,
"values": [Vector3(-3.13737, 0, 0), Vector3(-3.1381, 0, 1.0472)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6lga"]
_data = {
&"RESET": SubResource("Animation_xo4kc"),
&"close": SubResource("Animation_kju7u"),
&"open": SubResource("Animation_ye7vl")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_r3ipb"]
size = Vector3(7, 7, 7)

[node name="Chest" node_paths=PackedStringArray("BillboardLabel") instance=ExtResource("1_5yx1o")]
script = ExtResource("2_f51ac")
BillboardLabel = NodePath("BillboardLabel")

[node name="DebounceTimer" type="Timer" parent="." index="0"]
wait_time = 0.2

[node name="TopLayer" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, -0.521861, 0.00816223, 0, -0.00220359, -1.933, 0.587934, 0.719454, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="." index="4" node_paths=PackedStringArray("root")]
collision_layer = 3
script = ExtResource("2_ha2tq")
root = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.513945, 0.0116425)
shape = SubResource("BoxShape3D_nm63g")

[node name="OpenAndCloseAnim" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_g6lga")
}

[node name="BillboardLabel" type="Label3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54988, 0)
billboard = 1
shaded = true
text = "Chest"
font = ExtResource("4_xn6ko")
font_size = 50

[node name="BillboardLabelDetection" type="Area3D" parent="." index="7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BillboardLabelDetection" index="0"]
shape = SubResource("BoxShape3D_r3ipb")

[connection signal="timeout" from="DebounceTimer" to="." method="_on_debounce_timer_timeout"]
[connection signal="animation_finished" from="OpenAndCloseAnim" to="." method="_on_anim_finished"]
[connection signal="body_entered" from="BillboardLabelDetection" to="." method="_on_billboard_label_detection_body_entered"]
[connection signal="body_exited" from="BillboardLabelDetection" to="." method="_on_billboard_label_detection_body_exited"]
